fix collapsed sidebar

--- a/src/sass/_config.scss
+++ b/src/sass/_config.scss
@@ -89,7 +89,7 @@ $header-height: 50px;
 $header-background-color: $white;
 
 $sidebar-width: 220px;
-$sidebar-collapsed-width: 60px;
+$sidebar-collapsed-width: 45px;
 $sidebar-hidden-width: 0;
 $sidebar-zindex: $zindex-1000;
 $sidebar-text-color: darken($color-light, $darker-percent);
