--- a/src/sass/layout/_layout.scss
+++ b/src/sass/layout/_layout.scss
@@ -30,6 +30,9 @@
     }
     aside#sidebar {
       width: $sidebar-collapsed-width;
+      span, b {
+        display: none;
+      }
     }
   }
   &.sidebar-hidden {
